# BrainGenix-STS

./: .codacy,yml  .gitignore  BrainGenix-STS  CMakeLists.txt  Main.py  README.md  test.py
CMake/BuildUtils/: Assimp.cmake  Backward.cmake  Boost.cmake  FreeImage.cmake  GLM.cmake  Threads.cmake  YAML-CPP.cmake
CMake/Utils/: ColorizeMessages.cmake  DisableTargetWarnings.cmake  SetBinaryDir.cmake
CPP/: CMakeLists.txt
CPP/CMake/BuildUtils/: Boost.cmake
CPP/Sandbox/TriangleArea/: TriangleArea.py
CPP/Source/: Config.yaml  Main.cpp
CPP/Source/Core/NeuronFeatureExtraction/STS_NeuronCapacitanceExtraction/: CMakeLists.txt  STS_CLASS_TriangleAreaThreadingEngine.cpp  STS_CLASS_TriangleAreaThreadingEngine.h  STS_FUNCTION_CalculateLineDistance.cpp  STS_FUNCTION_CalculateLineDistance.h  STS_FUNCTION_TriangleArea.cpp  STS_FUNCTION_TriangleArea.h  STS_TriangleArea.h
CPP/Source/Core/Structures/STS_STRUCT_SystemUtils/: CMakeLists.txt  STS_STRUCT_SystemUtils.cpp  STS_STRUCT_SystemUtils.h
CPP/Source/Core/Structures/STS_STRUCT_Triangle/: CMakeLists.txt  STS_STRUCT_Triangle.cpp  STS_STRUCT_Triangle.h
CPP/Source/Core/Structures/STS_STRUCT_Vertex/: CMakeLists.txt  STS_STRUCT_Vertex.cpp  STS_STRUCT_Vertex.h
CPP/Source/Core/Utils/STS_ConfigurationLoader/: CMakeLists.txt  STS_FUNCTION_LocalConfigurationLoader.cpp  STS_FUNCTION_LocalConfigurationLoader.h
CPP/Source/Core/Utils/STS_LoggingSystem/: CMakeLists.txt  STS_CLASS_LoggingSystem.h
CPP/Tools/: Build.sh
Core/Initialization/: Instantiator.py  LoadConfig.py
Core/Management/Logger/: CLAS.py  DBLoggerThread.py  Logger.py
Docs/: BrainGenix STS Overview.drawio  BrainGenix STS Overview.drawio.html  Scan Translation System Diagrams.vpp
Python/Tools/ConvertToJPEG/: .gitignore
Python/Tools/ConvertToJPEG/Scripts/: Install.sh  Run.sh
Sandbox/LoadNeuronData/: DataLoader.py  NeuronLoader.py
Sandbox/Stitch/: layermerge.py  stitching.py  test1.py  test2.py
Sandbox/Stitch/50/: TileConfiguration.registered.txt  TileConfiguration.txt
Sandbox/Stitch/EMFilesRenamed/: TileConfiguration.registered.txt  TileConfiguration.txt
Sandbox/Stitch/output/: img_t1_z1_c1  img_t1_z1_c2  img_t1_z1_c3
Source/: Main.cpp
Source/Core/Loader/STS_ModelLoader/: CMakeLists.txt  STS_CLASS_ModelLoader.cpp  STS_CLASS_ModelLoader.h
Source/Core/NeuronFeatureExtraction/STS_NeuronCapacitanceExtraction/: CMakeLists.txt  STS_CLASS_NeuronCapacitanceExtraction.h  STS_CLASS_TriangleAreaThreadingEngine.cpp  STS_CLASS_TriangleAreaThreadingEngine.h  STS_FUNCTION_CalculateLineDistance.cpp  STS_FUNCTION_CalculateLineDistance.h  STS_FUNCTION_GetNumCPUs.cpp  STS_FUNCTION_GetNumCPUs.h  STS_FUNCTION_TriangleArea.h
Source/Core/Structures/STS_STRUCT_Triangle/: CMakeLists.txt  STS_STRUCT_Triangle.h
Source/Core/Structures/STS_STRUCT_Vertex/: CMakeLists.txt
Source/Core/Utils/STS_ConfigurationLoader/: CMakeLists.txt  STS_FUNCTION_LocalConfigurationLoader.cpp  STS_FUNCTION_LocalConfigurationLoader.h
Source/Core/Utils/STS_LoggingSystem/: CMakeLists.txt  STS_CLASS_LoggingSystem.cpp
Tools/: Run.sh
Tools/ConvertToJPEG/: Main.py  README.md
